--- a/hint.css
+++ b/hint.css
@@ -1,4 +1,4 @@
-/*! Hint.css - v1.3.0 - 2013-08-05
+/*! Hint.css - v1.3.0 - 2013-10-16
 * http://kushagragour.in/lab/hint/
 * Copyright (c) 2013 Kushagra Gour; Licensed MIT */
 
@@ -96,13 +96,13 @@
  * top tooltip
  */
 .hint--top:before {
-  margin-bottom: -12px; }
+  margin-bottom: -14px; }
 .hint--top:after {
-  margin-left: -18px; }
+  margin-left: -21px; }
 .hint--top:before, .hint--top:after {
   bottom: 100%;
   left: 50%; }
-.hint--top:hover:after, .hint--top:hover:before, .hint--top:focus:after, .hint--top:focus:before {
+.hint--top:hover:after, .hint--top:hover:before {
   -webkit-transform: translateY(-8px);
   -moz-transform: translateY(-8px);
   transform: translateY(-8px); }
@@ -111,13 +111,13 @@
  * bottom tooltip
  */
 .hint--bottom:before {
-  margin-top: -12px; }
+  margin-top: -14px; }
 .hint--bottom:after {
-  margin-left: -18px; }
+  margin-left: -21px; }
 .hint--bottom:before, .hint--bottom:after {
   top: 100%;
   left: 50%; }
-.hint--bottom:hover:after, .hint--bottom:hover:before, .hint--bottom:focus:after, .hint--bottom:focus:before {
+.hint--bottom:hover:after, .hint--bottom:hover:before {
   -webkit-transform: translateY(8px);
   -moz-transform: translateY(8px);
   transform: translateY(8px); }
@@ -126,14 +126,14 @@
  * right tooltip
  */
 .hint--right:before {
-  margin-left: -12px;
-  margin-bottom: -6px; }
+  margin-left: -14px;
+  margin-bottom: -7px; }
 .hint--right:after {
   margin-bottom: -14px; }
 .hint--right:before, .hint--right:after {
   left: 100%;
   bottom: 50%; }
-.hint--right:hover:after, .hint--right:hover:before, .hint--right:focus:after, .hint--right:focus:before {
+.hint--right:hover:after, .hint--right:hover:before {
   -webkit-transform: translateX(8px);
   -moz-transform: translateX(8px);
   transform: translateX(8px); }
@@ -142,14 +142,14 @@
  * left tooltip
  */
 .hint--left:before {
-  margin-right: -12px;
-  margin-bottom: -6px; }
+  margin-right: -14px;
+  margin-bottom: -7px; }
 .hint--left:after {
   margin-bottom: -14px; }
 .hint--left:before, .hint--left:after {
   right: 100%;
   bottom: 50%; }
-.hint--left:hover:after, .hint--left:hover:before, .hint--left:focus:after, .hint--left:focus:before {
+.hint--left:hover:after, .hint--left:hover:before {
   -webkit-transform: translateX(-8px);
   -moz-transform: translateX(-8px);
   transform: translateX(-8px); }
