--- a/src/hint-position.scss
+++ b/src/hint-position.scss
@@ -26,7 +26,7 @@
 		left: 50%;
 	}
 
-	&:hover, &:focus {
+	&:hover {
 		@include set-margin('translateY', $transitionDirection);
 	}
 }
@@ -49,7 +49,7 @@
 		bottom: 50%;
 	}
 
-	&:hover, &:focus {
+	&:hover {
 		@include set-margin('translateX', $transitionDirection);
 	}
 }
